--- a/etl.ipynb
+++ b/etl.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,22 @@
     "import glob\n",
     "import psycopg2\n",
     "import pandas as pd\n",
-    "from sql_queries import *"
+    "from sql_queries import *\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run create_tables.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,29 +72,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist_id</th>\n",
+       "      <th>artist_latitude</th>\n",
+       "      <th>artist_location</th>\n",
+       "      <th>artist_longitude</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>num_songs</th>\n",
+       "      <th>song_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ARMAC4T1187FB3FA4C</td>\n",
+       "      <td>40.82624</td>\n",
+       "      <td>Morris Plains, NJ</td>\n",
+       "      <td>-74.47995</td>\n",
+       "      <td>The Dillinger Escape Plan</td>\n",
+       "      <td>207.77751</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SOBBUGU12A8C13E95D</td>\n",
+       "      <td>Setting Fire to Sleeping Giants</td>\n",
+       "      <td>2004</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            artist_id  artist_latitude    artist_location  artist_longitude  \\\n",
+       "0  ARMAC4T1187FB3FA4C         40.82624  Morris Plains, NJ         -74.47995   \n",
+       "\n",
+       "                 artist_name   duration  num_songs             song_id  \\\n",
+       "0  The Dillinger Escape Plan  207.77751          1  SOBBUGU12A8C13E95D   \n",
+       "\n",
+       "                             title  year  \n",
+       "0  Setting Fire to Sleeping Giants  2004  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "song_files = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filepath = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = \n",
+    "song_files = get_files(\"data/song_data\")\n",
+    "filepath = song_files[0]\n",
+    "df = pd.read_json(filepath, lines=True)\n",
     "df.head()"
    ]
   },
@@ -102,11 +163,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SOBBUGU12A8C13E95D',\n",
+       " 'Setting Fire to Sleeping Giants',\n",
+       " 'ARMAC4T1187FB3FA4C',\n",
+       " 2004,\n",
+       " 207.77751]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "song_data = \n",
+    "song_data = df[[\"song_id\", \"title\", \"artist_id\", \"year\", \"duration\"]].values.tolist()[0]\n",
     "song_data"
    ]
   },
@@ -120,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,11 +225,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ARMAC4T1187FB3FA4C',\n",
+       " 'The Dillinger Escape Plan',\n",
+       " 'Morris Plains, NJ',\n",
+       " 40.82624,\n",
+       " -74.47995]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "artist_data = \n",
+    "artist_data = df[[\"artist_id\", \"artist_name\", \"artist_location\", \"artist_latitude\", \"artist_longitude\"]].values.tolist()[0]\n",
     "artist_data"
    ]
   },
@@ -167,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,30 +288,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist</th>\n",
+       "      <th>auth</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>itemInSession</th>\n",
+       "      <th>lastName</th>\n",
+       "      <th>length</th>\n",
+       "      <th>level</th>\n",
+       "      <th>location</th>\n",
+       "      <th>method</th>\n",
+       "      <th>page</th>\n",
+       "      <th>registration</th>\n",
+       "      <th>sessionId</th>\n",
+       "      <th>song</th>\n",
+       "      <th>status</th>\n",
+       "      <th>ts</th>\n",
+       "      <th>userAgent</th>\n",
+       "      <th>userId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Celeste</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Williams</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Klamath Falls, OR</td>\n",
+       "      <td>GET</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>1.541078e+12</td>\n",
+       "      <td>438</td>\n",
+       "      <td>None</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1541990217796</td>\n",
+       "      <td>\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pavement</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Sylvie</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cruz</td>\n",
+       "      <td>99.16036</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Washington-Arlington-Alexandria, DC-VA-MD-WV</td>\n",
+       "      <td>PUT</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1.540266e+12</td>\n",
+       "      <td>345</td>\n",
+       "      <td>Mercy:The Laundromat</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1541990258796</td>\n",
+       "      <td>\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     artist       auth firstName gender  itemInSession  lastName    length  \\\n",
+       "0      None  Logged In   Celeste      F              0  Williams       NaN   \n",
+       "1  Pavement  Logged In    Sylvie      F              0      Cruz  99.16036   \n",
+       "\n",
+       "  level                                      location method      page  \\\n",
+       "0  free                             Klamath Falls, OR    GET      Home   \n",
+       "1  free  Washington-Arlington-Alexandria, DC-VA-MD-WV    PUT  NextSong   \n",
+       "\n",
+       "   registration  sessionId                  song  status             ts  \\\n",
+       "0  1.541078e+12        438                  None     200  1541990217796   \n",
+       "1  1.540266e+12        345  Mercy:The Laundromat     200  1541990258796   \n",
+       "\n",
+       "                                           userAgent userId  \n",
+       "0  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...     53  \n",
+       "1  \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...     10  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "log_files = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filepath = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = \n",
-    "df.head()"
+    "log_files = get_files(\"data/log_data\")\n",
+    "filepath = log_files[0]\n",
+    "df = pd.read_json(filepath, lines=True)\n",
+    "df.head(2)"
    ]
   },
   {
@@ -240,42 +426,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = \n",
-    "df.head()"
+    "df = df.query(\"page == 'NextSong'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = \n",
-    "t.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time_data = ()\n",
-    "column_labels = ()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time_df = \n",
-    "time_df.head()"
+    "# Create time-related features\n",
+    "df[\"ts\"] = pd.to_datetime(df[\"ts\"], unit='ms')\n",
+    "df[\"hour\"], df[\"day\"], df[\"week\"], df[\"month\"], df[\"year\"], df[\"weekday\"] = \\\n",
+    "    df[\"ts\"].apply(lambda x: x.hour), \\\n",
+    "    df[\"ts\"].apply(lambda x: x.day), \\\n",
+    "    df[\"ts\"].apply(lambda x: x.week), \\\n",
+    "    df[\"ts\"].apply(lambda x: x.month), \\\n",
+    "    df[\"ts\"].apply(lambda x: x.year), \\\n",
+    "    df[\"ts\"].apply(lambda x: x.dayofweek)\n",
+    "time_df = (\n",
+    "    df.\n",
+    "    loc[:,[\"ts\", \"hour\", \"day\", \"week\", \"month\", \"year\", \"weekday\"]].\n",
+    "    drop_duplicates()\n",
+    ")"
    ]
   },
   {
@@ -288,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,11 +492,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_df = "
+    "user_df = (\n",
+    "    df.\n",
+    "    loc[:,[\"userId\", \"firstName\", \"lastName\", \"gender\", \"level\"]].\n",
+    "    rename({\"userId\": \"user_id\",\n",
+    "            \"firstName\": \"first_name\",\n",
+    "            \"lastName\": \"last_name\"},\n",
+    "           axis=\"columns\").\n",
+    "    drop_duplicates()\n",
+    ")"
    ]
   },
   {
@@ -332,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,18 +549,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "for index, row in df.iterrows():\n",
     "\n",
     "    # get songid and artistid from song and artist tables\n",
-    "    results = cur.execute(song_select, (row.song, row.artist, row.length))\n",
-    "    songid, artistid = results if results else None, None\n",
+    "    cur.execute(song_select, (row.song, row.artist, row.length))\n",
+    "    results = cur.fetchone()\n",
+    "    \n",
+    "    if results:\n",
+    "        songid, artistid = results\n",
+    "    else:\n",
+    "        songid, artistid = None, None\n",
     "\n",
     "    # insert songplay record\n",
-    "    songplay_data = ()\n",
+    "    songplay_data = (\n",
+    "        row.ts, row.userId, row.level,\n",
+    "        songid, artistid, row.sessionId, row.location,\n",
+    "        row.userAgent\n",
+    "    )\n",
     "    cur.execute(songplay_table_insert, songplay_data)\n",
     "    conn.commit()"
    ]
@@ -396,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,13 +604,6 @@
     "# Implement `etl.py`\n",
     "Use what you've completed in this notebook to implement `etl.py`."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
