--- a/etl.ipynb
+++ b/etl.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,48 +96,48 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>num_songs</th>\n",
        "      <th>artist_id</th>\n",
        "      <th>artist_latitude</th>\n",
-       "      <th>artist_location</th>\n",
        "      <th>artist_longitude</th>\n",
+       "      <th>artist_location</th>\n",
        "      <th>artist_name</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>num_songs</th>\n",
        "      <th>song_id</th>\n",
        "      <th>title</th>\n",
+       "      <th>duration</th>\n",
        "      <th>year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ARMAC4T1187FB3FA4C</td>\n",
-       "      <td>40.82624</td>\n",
-       "      <td>Morris Plains, NJ</td>\n",
-       "      <td>-74.47995</td>\n",
-       "      <td>The Dillinger Escape Plan</td>\n",
-       "      <td>207.77751</td>\n",
        "      <td>1</td>\n",
-       "      <td>SOBBUGU12A8C13E95D</td>\n",
-       "      <td>Setting Fire to Sleeping Giants</td>\n",
-       "      <td>2004</td>\n",
+       "      <td>AR7G5I41187FB4CE6C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>London, England</td>\n",
+       "      <td>Adam Ant</td>\n",
+       "      <td>SONHOTT12A8C13493C</td>\n",
+       "      <td>Something Girls</td>\n",
+       "      <td>233.40363</td>\n",
+       "      <td>1982</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            artist_id  artist_latitude    artist_location  artist_longitude  \\\n",
-       "0  ARMAC4T1187FB3FA4C         40.82624  Morris Plains, NJ         -74.47995   \n",
+       "   num_songs           artist_id  artist_latitude  artist_longitude  \\\n",
+       "0          1  AR7G5I41187FB4CE6C              NaN               NaN   \n",
        "\n",
-       "                 artist_name   duration  num_songs             song_id  \\\n",
-       "0  The Dillinger Escape Plan  207.77751          1  SOBBUGU12A8C13E95D   \n",
+       "   artist_location artist_name             song_id            title  \\\n",
+       "0  London, England    Adam Ant  SONHOTT12A8C13493C  Something Girls   \n",
        "\n",
-       "                             title  year  \n",
-       "0  Setting Fire to Sleeping Giants  2004  "
+       "    duration  year  \n",
+       "0  233.40363  1982  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,20 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['SOBBUGU12A8C13E95D',\n",
-       " 'Setting Fire to Sleeping Giants',\n",
-       " 'ARMAC4T1187FB3FA4C',\n",
-       " 2004,\n",
-       " 207.77751]"
+       "['SONHOTT12A8C13493C',\n",
+       " 'Something Girls',\n",
+       " 'AR7G5I41187FB4CE6C',\n",
+       " 1982,\n",
+       " 233.40363]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,20 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ARMAC4T1187FB3FA4C',\n",
-       " 'The Dillinger Escape Plan',\n",
-       " 'Morris Plains, NJ',\n",
-       " 40.82624,\n",
-       " -74.47995]"
+       "['AR7G5I41187FB4CE6C', 'Adam Ant', 'London, England', nan, nan]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -335,69 +331,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>None</td>\n",
+       "      <td>Frumpies</td>\n",
        "      <td>Logged In</td>\n",
-       "      <td>Celeste</td>\n",
+       "      <td>Anabelle</td>\n",
        "      <td>F</td>\n",
        "      <td>0</td>\n",
-       "      <td>Williams</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Simpson</td>\n",
+       "      <td>134.47791</td>\n",
        "      <td>free</td>\n",
-       "      <td>Klamath Falls, OR</td>\n",
-       "      <td>GET</td>\n",
-       "      <td>Home</td>\n",
-       "      <td>1.541078e+12</td>\n",
-       "      <td>438</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Philadelphia-Camden-Wilmington, PA-NJ-DE-MD</td>\n",
+       "      <td>PUT</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1.541044e+12</td>\n",
+       "      <td>455</td>\n",
+       "      <td>Fuck Kitty</td>\n",
        "      <td>200</td>\n",
-       "      <td>1541990217796</td>\n",
-       "      <td>\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...</td>\n",
-       "      <td>53</td>\n",
+       "      <td>1541903636796</td>\n",
+       "      <td>\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...</td>\n",
+       "      <td>69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Pavement</td>\n",
+       "      <td>Kenny G with Peabo Bryson</td>\n",
        "      <td>Logged In</td>\n",
-       "      <td>Sylvie</td>\n",
+       "      <td>Anabelle</td>\n",
        "      <td>F</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Cruz</td>\n",
-       "      <td>99.16036</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Simpson</td>\n",
+       "      <td>264.75057</td>\n",
        "      <td>free</td>\n",
-       "      <td>Washington-Arlington-Alexandria, DC-VA-MD-WV</td>\n",
+       "      <td>Philadelphia-Camden-Wilmington, PA-NJ-DE-MD</td>\n",
        "      <td>PUT</td>\n",
        "      <td>NextSong</td>\n",
-       "      <td>1.540266e+12</td>\n",
-       "      <td>345</td>\n",
-       "      <td>Mercy:The Laundromat</td>\n",
+       "      <td>1.541044e+12</td>\n",
+       "      <td>455</td>\n",
+       "      <td>By The Time This Night Is Over</td>\n",
        "      <td>200</td>\n",
-       "      <td>1541990258796</td>\n",
+       "      <td>1541903770796</td>\n",
        "      <td>\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...</td>\n",
-       "      <td>10</td>\n",
+       "      <td>69</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     artist       auth firstName gender  itemInSession  lastName    length  \\\n",
-       "0      None  Logged In   Celeste      F              0  Williams       NaN   \n",
-       "1  Pavement  Logged In    Sylvie      F              0      Cruz  99.16036   \n",
+       "                      artist       auth firstName gender  itemInSession  \\\n",
+       "0                   Frumpies  Logged In  Anabelle      F              0   \n",
+       "1  Kenny G with Peabo Bryson  Logged In  Anabelle      F              1   \n",
        "\n",
-       "  level                                      location method      page  \\\n",
-       "0  free                             Klamath Falls, OR    GET      Home   \n",
-       "1  free  Washington-Arlington-Alexandria, DC-VA-MD-WV    PUT  NextSong   \n",
+       "  lastName     length level                                     location  \\\n",
+       "0  Simpson  134.47791  free  Philadelphia-Camden-Wilmington, PA-NJ-DE-MD   \n",
+       "1  Simpson  264.75057  free  Philadelphia-Camden-Wilmington, PA-NJ-DE-MD   \n",
        "\n",
-       "   registration  sessionId                  song  status             ts  \\\n",
-       "0  1.541078e+12        438                  None     200  1541990217796   \n",
-       "1  1.540266e+12        345  Mercy:The Laundromat     200  1541990258796   \n",
+       "  method      page  registration  sessionId                            song  \\\n",
+       "0    PUT  NextSong  1.541044e+12        455                      Fuck Kitty   \n",
+       "1    PUT  NextSong  1.541044e+12        455  By The Time This Night Is Over   \n",
        "\n",
-       "                                           userAgent userId  \n",
-       "0  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...     53  \n",
-       "1  \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...     10  "
+       "   status             ts                                          userAgent  \\\n",
+       "0     200  1541903636796  \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...   \n",
+       "1     200  1541903770796  \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4...   \n",
+       "\n",
+       "  userId  \n",
+       "0     69  \n",
+       "1     69  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
